[gd_scene load_steps=3 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://gdmpt.gdns" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource( 2 )

[node name="SliderContainer" type="HFlowContainer" parent="."]
margin_left = 80.0
margin_top = 419.0
margin_right = 221.0
margin_bottom = 544.0

[node name="TempoSlider" type="VSlider" parent="SliderContainer"]
margin_right = 68.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
size_flags_horizontal = 3
min_value = 0.5
max_value = 1.5
step = 0.01
value = 1.0

[node name="PitchSlider" type="VSlider" parent="SliderContainer"]
margin_left = 72.0
margin_right = 140.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
size_flags_horizontal = 3
min_value = 0.5
max_value = 1.5
step = 0.01
value = 1.0

[node name="TempoLabel" type="Label" parent="."]
margin_left = 93.0
margin_top = 392.0
margin_right = 137.0
margin_bottom = 406.0
text = "Tempo"
align = 1

[node name="PitchLabel" type="Label" parent="."]
margin_left = 164.0
margin_top = 392.0
margin_right = 208.0
margin_bottom = 406.0
text = "Pitch"
align = 1

[node name="ChannelsContainer" type="HFlowContainer" parent="."]
margin_left = 50.0
margin_top = 80.0
margin_right = 974.0
margin_bottom = 280.0

[node name="ChannelsLabel" type="Label" parent="."]
margin_left = 80.0
margin_top = 59.0
margin_right = 138.0
margin_bottom = 73.0
text = "Channels"

[node name="PlayButton" type="Button" parent="."]
margin_left = 330.0
margin_top = 380.0
margin_right = 390.0
margin_bottom = 420.0
text = "Play"

[node name="PauseButton" type="Button" parent="."]
margin_left = 330.0
margin_top = 430.0
margin_right = 390.0
margin_bottom = 470.0
text = "Pause"

[node name="StopButton" type="Button" parent="."]
margin_left = 330.0
margin_top = 480.0
margin_right = 390.0
margin_bottom = 520.0
text = "Stop"

[node name="InterpolationButton" type="OptionButton" parent="."]
margin_left = 88.0
margin_top = 300.0
margin_right = 117.0
margin_bottom = 320.0

[node name="Interpolation label" type="Label" parent="."]
margin_left = 86.0
margin_top = 282.0
margin_right = 203.0
margin_bottom = 296.0
text = "Interpolation filter"
